<resources>
    <string name="app_name">SlidingTiles</string>
    <string name="textview">TextView</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="ScoreText">Score</string>
    <string name="SaveText">Save</string>
    <string name="UndoText">Undo</string>
    <string name="button_newAccount">Create Account</string>
    <string name="button_login">Sign in</string>
    <string name="button_guest">Play As Guest</string>
    <string name="button_createAccount">Create</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="name"></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_slidingTiles">Sliding Tiles</string>
    <string name="text_gameChoice">Please choose a game to play!</string>
    <!-- Strings related to the scoreboard. -->
    <string name="AccountName1" />
    <string name="AccountName2" />
    <string name="AccountName3" />
    <string name="AccountName4" />
    <string name="AccountName5" />
    <string name="Score1" />
    <string name="Score2" />
    <string name="Score3" />
    <string name="Score4" />
    <string name="Score5" />
    <string name="text_scoreboard">Scoreboard</string>
</resources>
