<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="382dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="29dp"
        android:text="@string/ScoreText"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    <fall2018.csc2017.slidingtiles.GestureDetectGridView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/grid"
        android:layout_width="match_parent"
        android:layout_height="602dp"
        android:layout_below="@+id/textView9"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        tools:context="fall2018.csc2017.slidingtiles.GameActivity"></fall2018.csc2017.slidingtiles.GestureDetectGridView>

    <Button
        android:id="@+id/SaveButtonGameScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView9"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-5dp"
        android:layout_marginEnd="113dp"
        android:background="@color/colorAccent"
        android:text="@string/SaveText" />

    <Button
        android:id="@+id/UndoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/SaveButtonGameScreen"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/UndoText" />


</RelativeLayout>