<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreBoardActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scoreboardTable"
        android:layout_width="271dp"
        android:layout_height="325dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:stretchColumns="0,1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_column="0"
                android:padding="3dip"
                android:text="@string/AccountName1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="190dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/Score1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="185dp"
                android:layout_column="0"
                android:padding="3dip"
                android:text="@string/AccountName1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="190dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/Score1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="0"
                android:padding="3dip"
                android:text="@string/AccountName1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="190dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/Score1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="0"
                android:padding="3dip"
                android:text="@string/AccountName1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="190dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/Score1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_column="0"
                android:padding="3dip"
                android:text="@string/AccountName1"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:layout_width="190dp"
                android:layout_column="1"
                android:padding="3dip"
                android:text="@string/Score1"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="185dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_scoreboard"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/personalBest"
        android:layout_width="167dp"
        android:layout_height="31dp"
        android:layout_marginBottom="132dp"
        android:text="TextView"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>